[package]
name = "aublisk_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.15.0"
ic-cdk-timers = "0.9" # Feel free to remove this dependency if you don't need timers
serde = "1.0.203"
hex = "0.4.3"
icrc-ledger-types = "0.1.5"
sha2 = "0.10.8"
ic-xrc-types = "1.2.0"
