[package]
name = "aublisk_icp_backend"
version = "0.1.0"
authors = ["Psychedelic team <support@fleek.co>"]
edition = "2018"

[dependencies]
candid = {workspace = true}
ic-cdk = {workspace = true}
ic-cdk-macros = {workspace = true}
serde = {workspace = true}
num-traits = "0.2.14"
compile-time-run = "0.2.12"
# cap-sdk = { git = "https://github.com/Psychedelic/cap.git", branch = "main" }
app_core = {path = "../app_core"}
ic-ledger-types = {workspace = true}